--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="title">
                         <h4>MisayaFeng0xfff</h4>
                         <span id="totsong" class="label label-primary">歌曲：0</span>
-                        <span class="label label-success">播放列表：4</span>
+                        <span id="totlist" class="label label-success">播放列表：4</span>
                     </div>
                 </div>
                 <ul class="nav nav-sidebar">
@@ -218,7 +218,7 @@
     <audio></audio>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/my.js"></script>
+    <script src="controller/index.js"></script>
 </div>
 </body>
 </html>
