--- a/index.html
+++ b/index.html
@@ -133,6 +133,26 @@
                             </div>
                         </div>
                     </form>
+                    <input id="dialog" style="display:none;" nwdirectory type="file"/>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">云音乐设置</h3>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label for="music-dir" class="col-sm-3 control-label">歌曲最大搜索数</label>
+
+                            <div class="col-sm-9">
+                                <input id="search-limit"
+                                       type="number"
+                                       class="form-control"/>
+                            </div>
+                        </div>
+                    </form>
                     <input style="display:none;" id="fileDialog" nwdirectory type="file"/>
                 </div>
             </div>
@@ -170,7 +190,7 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="img-thumbnail media-object" src="assets/img/Ever%20Eternity.jpg"
+                                <img id='song-pic' class="img-thumbnail media-object" src=""
                                      alt="...">
                             </a>
                         </div>
@@ -241,13 +261,13 @@
 <script src="controller/settings.js" type="text/javascript"></script>
 <script src="controller/index.js" type="text/javascript"></script>
 <!--<script>-->
-    <!--var component = ['nav', 'category', 'controls', 'list', 'progress', 'settings', 'index'];-->
-    <!--for (var i = 0; i < component.length; i++) {-->
-        <!--var d = document.createElement('script');-->
-        <!--d.src = 'controller/' + component[i] + '.js';-->
-        <!--d.type = 'text/javascript';-->
-        <!--document.body.appendChild(d);-->
-    <!--}-->
+<!--var component = ['nav', 'category', 'controls', 'list', 'progress', 'settings', 'index'];-->
+<!--for (var i = 0; i < component.length; i++) {-->
+<!--var d = document.createElement('script');-->
+<!--d.src = 'controller/' + component[i] + '.js';-->
+<!--d.type = 'text/javascript';-->
+<!--document.body.appendChild(d);-->
+<!--}-->
 <!--</script>-->
 </body>
 </html>
