--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
 
     <div id="page" class="container-fluid">
         <div id="main" class="row">
-            <div class="col-sm-3" style="height:100%">
-                <div class="sidebar">
-                    <div class="user-head">
-                        <div class="avater">
-                            <a href="javascript:void(0);">
-                                <img class="img-thumbnail" ,
-                                     src="assets/img/avater.jpg" ,alt="...">
-                            </a>
-                        </div>
-                        <div class="title">
-                            <h4>未登录</h4>
-                            <span id="totsong" class="label label-primary"></span>&nbsp;
-                            <span id="totlist" class="label label-success"></span>
-                        </div>
+            <div class="col-sm-3 userinfo">
+                <div class="user-head">
+                    <div class="avater">
+                        <a href="javascript:void(0);">
+                            <img class="img-thumbnail" ,
+                                 src="assets/img/avater.jpg" ,alt="...">
+                        </a>
                     </div>
+                    <div class="title">
+                        <h4>未登录</h4>
+                        <span id="totsong" class="label label-primary"></span>&nbsp;
+                        <span id="totlist" class="label label-success"></span>
+                    </div>
+                </div>
+                <div class="sidebar">
                     <ul class="nav nav-sidebar">
                     </ul>
                 </div>
