--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="javascript:nav.MenuGo(0)">登录</a></li>
                             <li class="divider"></li>
-                            <li><a href="javascript:nav.MenuGo(1)">注册</a></li>
+                            <li><a href="javascript:nav.MenuGo(1)">注销</a></li>
                         </ul>
                     </div>
                 </ul>
