--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             账户
                         </button>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="javascript:nav.MenuGo(0)">登录</a></li>
-                            <li class="divider"></li>
-                            <li><a href="javascript:nav.MenuGo(1)">注销</a></li>
+                            <li id="menugo-0"><a href="javascript:nav.MenuGo(0)">登录</a></li>
+                            <!--<li class="divider"></li>-->
+                            <li id="menugo-1"><a href="javascript:nav.MenuGo(1)">注销</a></li>
                         </ul>
                     </div>
                 </ul>
@@ -266,7 +266,7 @@
                     <label class="control-label" style="color:red">糟糕！登录失败了！</label>
 
                     <div class="form-group">
-                        <input class="form-control" name="phone" type="text" placeholder="手机号"/>
+                        <input class="form-control" name="phone" type="text" placeholder="手机号或邮箱"/>
                     </div>
                     <div class="form-group">
                         <input class="form-control" name="password" type="password" placeholder="密码"/>
@@ -287,7 +287,7 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="controller/nav.js" type="text/javascript"></script>
 <script src="controller/userinfo.js" type="text/javascript"></script>
-<script src="controller/login.js" type="text/javascript"></script>
+<script src="controller/account.js" type="text/javascript"></script>
 <script src="controller/category.js" type="text/javascript"></script>
 <script src="controller/controls.js" type="text/javascript"></script>
 <script src="controller/list.js" type="text/javascript"></script>
