--- a/index.html
+++ b/index.html
@@ -284,23 +284,15 @@
 <!-- /.modal -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<script src="http://cdn.bootcss.com/howler/1.1.26/howler.min.js"></script>
 <script src="controller/nav.js" type="text/javascript"></script>
 <script src="controller/userinfo.js" type="text/javascript"></script>
 <script src="controller/account.js" type="text/javascript"></script>
 <script src="controller/category.js" type="text/javascript"></script>
 <script src="controller/controls.js" type="text/javascript"></script>
-<script src="controller/list.js" type="text/javascript"></script>
+<script src="controller/playlist.js" type="text/javascript"></script>
 <script src="controller/progress.js" type="text/javascript"></script>
 <script src="controller/settings.js" type="text/javascript"></script>
 <script src="controller/index.js" type="text/javascript"></script>
-<!--<script>-->
-<!--var component = ['nav', 'category', 'controls', 'list', 'progress', 'settings', 'index'];-->
-<!--for (var i = 0; i < component.length; i++) {-->
-<!--var d = document.createElement('script');-->
-<!--d.src = 'controller/' + component[i] + '.js';-->
-<!--d.type = 'text/javascript';-->
-<!--document.body.appendChild(d);-->
-<!--}-->
-<!--</script>-->
 </body>
 </html>
