--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="audio-adjust">
-                        <a id="vol-icon" href="javascript:controls.volIcon()">
+                        <a id="vol-icon" href="javascript:controls.volPanel()">
                             <span class="glyphicon glyphicon-volume-up"></span>
                         </a>
 
