--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 <!-- /.modal -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/sortable.js"></script>
 <script src="controller/nav.js" type="text/javascript"></script>
 <script src="controller/userinfo.js" type="text/javascript"></script>
 <script src="controller/account.js" type="text/javascript"></script>
