--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
                 <!--&lt;!&ndash;<a href="javascript:nav.close()"><span class="glyphicon glyphicon-remove"></span></a>&ndash;&gt;-->
                 <!--&lt;!&ndash;</li>&ndash;&gt;-->
                 <!--</ul>-->
+
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a id='user-profile' href="javascript:0" class="dropdown-toggle" data-toggle="dropdown"
+                           role="button" aria-expanded="false">
+                            <img src="" onError="this.src='assets/img/avater.jpg'" class="img-circle">
+                            <p>未登录</p>
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li id="menugo-0"><a href="javascript:nav.clickMenu(0)"><span
+                                    class="glyphicon glyphicon-log-in"></span>登录</a></li>
+                            <!--<li class="divider"></li>-->
+                            <li id="menugo-1"><a href="javascript:nav.clickMenu(1)">
+                                <span class="glyphicon glyphicon-log-out"></span>注销</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="javascript:controls.toggleWindow(false);">
+                        <span title="Mini模式" class="glyphicon glyphicon-resize-small"></span>
+                    </a></li>
+                </ul>
+
+
                 <div class="navbar-right">
                     <form class="navbar-form navbar-left" role="search">
                         <div class="input-group">
@@ -57,23 +80,7 @@
                         </div>
                         <!-- /input-group -->
                     </form>
-                    <!-- Single button -->
-                    <div class="btn-group navbar-btn">
-                        <button id="launcher" type="button" class="btn btn-default dropdown-toggle"
-                                data-toggle="dropdown"
-                                aria-expanded="false">
-                            账户
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li id="menugo-0"><a href="javascript:nav.clickMenu(0)">登录</a></li>
-                            <!--<li class="divider"></li>-->
-                            <li id="menugo-1"><a href="javascript:nav.clickMenu(1)">注销</a></li>
-                        </ul>
-                    </div>
-
-
                 </div>
-
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -110,7 +117,7 @@
             </div>
             <div class="list">
                 <div class="twrap">
-                    <table class="table table-hover">
+                    <table style="display:none" class="table table-hover">
                         <thead>
                         <tr>
                             <th>#</th>
@@ -189,6 +196,9 @@
             <div class="row">
                 <div class="col-sm-2 ">
                     <div class="audio-control">
+                        <a id="open-side" href="javascript:controls.openSide();">
+                            <span class="glyphicon glyphicon-list"></span>
+                        </a>
                         <a id="backward" href="javascript:controls.backward();">
                             <span class="glyphicon glyphicon-step-backward"></span>
                         </a>
@@ -207,8 +217,9 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img id='song-pic' class="img-thumbnail media-object" src=""
-                                     alt="...">
+                                <img id='song-pic' style="background-color:white" class="img-thumbnail media-object"
+                                     src=""
+                                     onError="this.src='assets/img/album.png'" alt="...">
                             </a>
                         </div>
                         <div class="media-body">
@@ -221,9 +232,6 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="audio-adjust">
-                        <a id="open-side" href="javascript:controls.openSide();">
-                            <span class="glyphicon glyphicon-list"></span>
-                        </a>
                         <a id="vol-icon" href="javascript:controls.volPanel()">
                             <span title="音量" class="glyphicon glyphicon-volume-up"></span>
                         </a>
@@ -232,9 +240,7 @@
                             <span title="列表循环" class="glyphicon glyphicon-repeat"></span>
                         </a>
 
-                        <a href="javascript:controls.toggleWindow(false);">
-                            <span title="Mini模式" class="glyphicon glyphicon-import"></span>
-                        </a>
+
                     </div>
                 </div>
                 <div class="mini-tool">
@@ -316,7 +322,6 @@
 <script src="assets/js/sortable.js"></script>
 <script src="controller/entry.js" type="text/javascript"></script>
 <script src="controller/nav.js" type="text/javascript"></script>
-<script src="controller/userinfo.js" type="text/javascript"></script>
 <script src="controller/account.js" type="text/javascript"></script>
 <script src="controller/category.js" type="text/javascript"></script>
 <script src="controller/controls.js" type="text/javascript"></script>
